# navigation_university

./: .clang-format  .pre-commit-config.yaml  README.md  repos.yaml
nav_u_dependencies/: CMakeLists.txt  package.xml
nav_u_generic_description/: CMakeLists.txt  package.xml
nav_u_generic_description/urdf/: macros.urdf.xacro
nav_u_robot_generator/: CMakeLists.txt  package.xml
nav_u_robot_generator/config/: gen.rviz
nav_u_robot_generator/include/nav_u_robot_generator/: app_widget.hpp  robot_gen_widget.hpp  rviz_panel.hpp  templates.hpp
nav_u_robot_generator/launch/: generator.launch.py
nav_u_robot_generator/src/: app_widget.cpp  main.cpp  robot_gen_widget.cpp  rviz_panel.cpp  templates.cpp
nav_u_robot_generator/templates/: CMakeLists.txt  CMakeLists2.txt  amcl.rviz  amcl.yaml  bt_nav.yaml  controller.yaml  description.launch.py.template  display.launch.py.template  gazebo.launch.py.template  generator.launch.py.template  global.rviz  global_plan.launch.py  kinematics.yaml  local.rviz  local_plan.launch.py  localization.launch.py  mapping.launch.py  mapping.rviz  package.xml.template  package2.xml.template  planner.yaml  recoveries.yaml  robot.urdf.xacro  trees.launch.py  variables.yaml
university_world/: CMakeLists.txt  package.xml
university_world/maps/: willow-2010-02-18-0.10.pgm
university_world/models/nowhere/: model.config  model.sdf
university_world/models/nowhere/meshes/: a_map.stl
university_world/worlds/: a.world
