<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_u_dependencies</name>
  <version>0.0.0</version>
  <description>A pile of run dependencies for the workshop</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>fuse</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbag2</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>urdf_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
